# alserepo

./: B45txtfiles  Parcial1.cpp  Parcial1_exe  README.md  b45txtfiles  code.cpp  commandtest.sh  datosclima  ejecutable  ejecutable.sh  ejemplo1  ejemplo1.cpp  ejemplo2.cpp  losdatos
Adicionales_practica1/: adicional2_2.cpp  ejercicio1_1  ejercicio1_1.cpp
Corte1/: Parcial1.cpp
Lab2_CorteII/: Pascal_exe  excel.cpp  tiempovent.cpp  (+1 more)
Lab3_corteII/biblio/: CMakeLists.txt
Lab3_corteII/biblio/include/: biblioteca.h  libro.h
Lab3_corteII/biblio/src/: biblioteca.cpp  libro.cpp  main.cpp
PARCIAL_CORTE_2/: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  cmake_install.cmake  reporte_consumo.txt  simulador_hogar
PARCIAL_CORTE_2/docs/html/: DispositivoInteligente_8cpp.html  DispositivoInteligente_8cpp__incl.dot  DispositivoInteligente_8h.html  DispositivoInteligente_8h__dep__incl.dot  DispositivoInteligente_8h__incl.dot  DispositivoInteligente_8h_source.html  annotated.html  classDispositivoInteligente-members.html  classDispositivoInteligente.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.dot
PARCIAL_CORTE_2/docs/html/search/: all_2.js  all_3.js  all_4.js  all_5.js  functions_2.js  functions_5.js  searchdata.js
PARCIAL_CORTE_2/include/: DispositivoInteligente.h
PARCIAL_CORTE_2/src/: DispositivoInteligente.cpp  main.cpp
(+51 files in other folders)
